# paylink-vault

./: .env  .vercelignore  LIGHT_PROTOCOL_INTEGRATION.md  README.md  package-lock.json  package.json  tailwind.config.ts
backend/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  railway.toml
backend/migrations/: 0001_init.sql
backend/src/: app.rs  config.rs  error.rs  main.rs
backend/src/db/: mod.rs  models.rs  queries.rs
backend/src/helius/: enhanced_tx.rs  mod.rs  priority_fee.rs
backend/src/privacy/: light_stub.rs  mod.rs  rail.rs  transparent.rs  types.rs
backend/src/routes/: fees.rs  helius_webhook.rs  mod.rs  paylinks.rs  receipts.rs
backend/src/util/: crypto.rs  idempotency.rs  json_scan.rs  mod.rs
src/: App.tsx  index.css
src/components/layout/: DashboardLayout.tsx  DashboardSidebar.tsx  Header.tsx
src/components/ui/: CopyButton.tsx  EmptyState.tsx  HeliusBadge.tsx  Identicon.tsx  LightProtocolBadge.tsx  LoadingSkeleton.tsx  PrivacyBadge.tsx  QRCodeCard.tsx  StatusPill.tsx
src/components/wallet/: ConnectWalletButton.tsx  WalletProvider.tsx
src/lib/: api.ts  lightProtocol.ts  merchant.ts  mockData.ts  types.ts
src/pages/: Landing.tsx  Pay.tsx  Receipt.tsx  Verify.tsx
src/pages/dashboard/: CreatePayLink.tsx  PayLinkDetails.tsx  PayLinksList.tsx  ReceiptsList.tsx  Settings.tsx
